WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
62207
[Qt] RenderThemeQt::adjustSliderThumbSize() should not refer to the parent style
https://bugs.webkit.org/show_bug.cgi?id=62207
Summary
[Qt] RenderThemeQt::adjustSliderThumbSize() should not refer to the parent style
Kent Tamura
Reported
2011-06-07 06:32:15 PDT
RenderThemeQt::adjustSliderThumbSize() should not refer to the parent style.
Attachments
Patch
(4.20 KB, patch)
2011-06-07 07:17 PDT
,
Kent Tamura
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2011-06-07 07:17:12 PDT
Created
attachment 96241
[details]
Patch
Andreas Kling
Comment 2
2011-06-07 15:41:08 PDT
Comment on
attachment 96241
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=96241&action=review
Thanks for lookin' out for Qt! <3 r=me
> Source/WebCore/ChangeLog:13 > + * platform/qt/RenderThemeQt.cpp: Use fixed values to avoid to refer to o->parent().
to refer -> referring
> Source/WebCore/platform/qt/RenderThemeQt.cpp:1468 > + // timelineThumbHeight should match to the height property of -webkit-media-controls-timeline in mediaControlsQt.css.
match to -> match
> Source/WebCore/platform/qt/RenderThemeQt.cpp:1471 > + // volumeThmbWidth should match to the width property of -webkit-media-controls-volue-slider in mediaControlsQt.css.
match to -> match volumeThmbWidth -> volumeThumbWidth volue -> volume
Kent Tamura
Comment 3
2011-06-07 17:18:33 PDT
(In reply to
comment #2
) Thank you for reviewing! I'll land with these English corrections.
Kent Tamura
Comment 4
2011-06-07 17:26:24 PDT
Committed
r88294
: <
http://trac.webkit.org/changeset/88294
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug