2011-06-07  Kent Tamura  <tkent@chromium.org>

Reviewed by Andreas Kling.

        [Qt] RenderThemeQt::adjustSliderThumbSize() should not refer to the parent style.
        https://bugs.webkit.org/show_bug.cgi?id=62207

        * css/mediaControlsQt.css: Add comments.
        (audio::-webkit-media-controls-timeline):
        (video::-webkit-media-controls-timeline):
        (audio::-webkit-media-controls-volume-slider):
        (video::-webkit-media-controls-volume-slider):
        * platform/qt/RenderThemeQt.cpp: Use fixed values to avoid referring to o->parent().
        (WebCore::RenderThemeQt::adjustSliderThumbSize):

Canonical link: https://commits.webkit.org/77724@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88294 268f45cc-cd09-0410-ab3c-d52691b4dbfc